--- a/templates/blog/tags/sidebar.html
+++ b/templates/blog/tags/sidebar.html
@@ -119,6 +119,7 @@
             <li><a href="/admin/" rel="nofollow">管理站点</a></li>
             {% if user.is_authenticated %}
                 <li><a href="{% url "account:logout" %}" rel="nofollow">登出</a>
+                <li><a href="https://www.baidu.com/" rel="nofollow">发表博客</a>
                 </li>
 
             {% else %}
